--- a/arch/arm64/configs/gabriel_j7xelte_defconfig
+++ b/arch/arm64/configs/gabriel_j7xelte_defconfig
@@ -1,11 +1,15 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.61 Kernel Configuration
+# Linux/arm64 3.18.65 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU=y
+CONFIG_ARCH_MMAP_RND_BITS_MIN=18
+CONFIG_ARCH_MMAP_RND_BITS_MAX=24
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_NO_IOPORT_MAP=y
 CONFIG_ILLEGAL_POINTER_VALUE=0xdead000000000000
 CONFIG_STACKTRACE_SUPPORT=y
@@ -101,6 +105,7 @@ CONFIG_RCU_FANOUT_LEAF=16
 CONFIG_RCU_FAST_NO_HZ=y
 # CONFIG_TREE_RCU_TRACE is not set
 # CONFIG_RCU_BOOST is not set
+CONFIG_RCU_KTHREAD_PRIO=0
 CONFIG_RCU_NOCB_CPU=y
 # CONFIG_RCU_NOCB_CPU_NONE is not set
 # CONFIG_RCU_NOCB_CPU_ZERO is not set
@@ -211,6 +216,10 @@ CONFIG_HAVE_CONTEXT_TRACKING=y
 CONFIG_HAVE_VIRT_CPU_ACCOUNTING_GEN=y
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_MODULES_USE_ELF_RELA=y
+CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
+CONFIG_ARCH_MMAP_RND_BITS=18
+CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS=11
 CONFIG_CLONE_BACKWARDS=y
 CONFIG_OLD_SIGSUSPEND3=y
 CONFIG_COMPAT_OLD_SIGACTION=y
@@ -364,8 +373,12 @@ CONFIG_HOTPLUG_CPU=y
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ=100
 CONFIG_HZ_100=y
+# CONFIG_HZ_250 is not set
+# CONFIG_HZ_300 is not set
+# CONFIG_HZ_1000 is not set
+CONFIG_HZ=100
+CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
 CONFIG_ARCH_SPARSEMEM_DEFAULT=y
@@ -394,6 +407,8 @@ CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
 CONFIG_KSM=y
+CONFIG_UKSM=y
+# CONFIG_KSM_LEGACY is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
@@ -417,6 +432,7 @@ CONFIG_FIX_INACTIVE_RATIO=y
 CONFIG_TIGHT_PGDAT_BALANCE=y
 # CONFIG_SWAP_ENABLE_READAHEAD is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
+CONFIG_MMAP_READAROUND_LIMIT=0
 CONFIG_SECCOMP=y
 # CONFIG_XEN is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
@@ -432,8 +448,6 @@ CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
 # CONFIG_TIMA is not set
 # CONFIG_TIMA_LKMAUTH is not set
-# CONFIG_TIMA_RKP is not set
-# CONFIG_RKP_KDP is not set
 # CONFIG_TIMA_TEST_INFRA is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 
@@ -476,6 +490,7 @@ CONFIG_PM_GENERIC_DOMAINS_RUNTIME=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
+CONFIG_QUICK_WAKEUP=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 
@@ -507,12 +522,15 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
+# CONFIG_LOAD_BASED_CORE_CURRENT_CAL is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_GABRIEL is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_GABRIEL_PLUS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CULTIVATION is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LIONFISH is not set
@@ -521,6 +539,8 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+CONFIG_CPU_FREQ_GOV_GABRIEL=y
+CONFIG_CPU_FREQ_GOV_GABRIEL_PLUS=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPUFREQ_DT is not set
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
@@ -1124,7 +1144,6 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
-CONFIG_TIMA_LOG=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1269,7 +1288,6 @@ CONFIG_MD=y
 CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
-CONFIG_DM_BUFIO=y
 CONFIG_DM_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_THIN_PROVISIONING is not set
@@ -2504,17 +2522,12 @@ CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="7870"
 # CONFIG_MALI_NO_MALI is not set
 # CONFIG_MALI_TRACE_TIMELINE is not set
 # CONFIG_MALI_SYSTEM_TRACE is not set
-# CONFIG_MALI_GPU_TRACEPOINTS is not set
 # CONFIG_MALI_SEC_HWCNT is not set
 CONFIG_MALI_SYSTRACE_SUPPORT=y
-# CONFIG_MALI_DVFS_USER is not set
 # CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
 # CONFIG_MALI_DEVFREQ is not set
 CONFIG_MALI_T83X=y
-CONFIG_MALI_R7P0_T83X=y
-CONFIG_MALI_TIMELINE_DISABLED_T83X=y
-# CONFIG_MALI_GATOR_SUPPORT_TIMELINE_T83X is not set
-# CONFIG_MALI_MIPE_ENABLED_T83X is not set
+CONFIG_MALI_R12P0=y
 
 #
 # Direct Rendering Manager
@@ -3068,6 +3081,7 @@ CONFIG_USB_RNDIS_MULTIPACKET=y
 # CONFIG_UWB is not set
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
+CONFIG_MMC_BLOCK_DEFERRED_RESUME=y
 # CONFIG_MMC_CLKGATE is not set
 # CONFIG_MMC_EMBEDDED_SDIO is not set
 # CONFIG_MMC_PARANOID_SD_INIT is not set
@@ -3847,6 +3861,7 @@ CONFIG_SEC_VIB=y
 # File systems
 #
 CONFIG_DCACHE_WORD_ACCESS=y
+CONFIG_INTERRUPTIBLE_SYNC=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 # CONFIG_EXT2_FS_POSIX_ACL is not set
@@ -3861,6 +3876,7 @@ CONFIG_EXT4_FS=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 CONFIG_EXT4_FS_SECURITY=y
 CONFIG_EXT4_ENCRYPTION=y
+CONFIG_EXT4_FS_ENCRYPTION=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_SDCARD_FS=y
 CONFIG_SDCARD_FS_CI_SEARCH=y
@@ -3915,6 +3931,7 @@ CONFIG_FAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_FAT_SUPPORT_STLOG=y
 CONFIG_SDFAT_FS=y
 CONFIG_SDFAT_DELAYED_META_DIRTY=y
+# CONFIG_SDFAT_SUPPORT_DIR_SYNC is not set
 CONFIG_SDFAT_DEFAULT_CODEPAGE=437
 CONFIG_SDFAT_DEFAULT_IOCHARSET="utf8"
 # CONFIG_SDFAT_CHECK_RO_ATTR is not set
@@ -3925,6 +3942,7 @@ CONFIG_SDFAT_SUPPORT_STLOG=y
 CONFIG_SDFAT_DEBUG=y
 # CONFIG_SDFAT_DBG_IOCTL is not set
 CONFIG_SDFAT_DBG_MSG=y
+# CONFIG_SDFAT_DBG_BUGON is not set
 CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_DEFAULT_CODEPAGE=437
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
@@ -3934,6 +3952,7 @@ CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 # CONFIG_EXFAT_COMPAT_UFSD is not set
 # CONFIG_EXFAT_DEBUG is not set
 CONFIG_NTFS_FS=y
+# CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
 
 #
@@ -3993,6 +4012,14 @@ CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFSD is not set
 # CONFIG_CEPH_FS is not set
 CONFIG_CIFS=y
+# CONFIG_CIFS_STATS is not set
+# CONFIG_CIFS_WEAK_PW_HASH is not set
+# CONFIG_CIFS_UPCALL is not set
+# CONFIG_CIFS_XATTR is not set
+CONFIG_CIFS_DEBUG=y
+# CONFIG_CIFS_DEBUG2 is not set
+# CONFIG_CIFS_DFS_UPCALL is not set
+# CONFIG_CIFS_SMB2 is not set
 # CONFIG_NCP_FS is not set
 # CONFIG_CODA_FS is not set
 # CONFIG_AFS_FS is not set
@@ -4219,7 +4246,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 CONFIG_KEYS=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
-# CONFIG_ENCRYPTED_KEYS is not set
+CONFIG_ENCRYPTED_KEYS=y
 CONFIG_KEYS_DEBUG_PROC_KEYS=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 CONFIG_SECURITY=y
@@ -4245,7 +4272,6 @@ CONFIG_INTEGRITY=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_TZ_ICCC=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
@@ -4290,16 +4316,16 @@ CONFIG_CRYPTO_SEQIV=y
 #
 CONFIG_CRYPTO_CBC=y
 CONFIG_CRYPTO_CTR=y
-# CONFIG_CRYPTO_CTS is not set
+CONFIG_CRYPTO_CTS=y
 CONFIG_CRYPTO_ECB=y
 # CONFIG_CRYPTO_LRW is not set
 # CONFIG_CRYPTO_PCBC is not set
-# CONFIG_CRYPTO_XTS is not set
+CONFIG_CRYPTO_XTS=y
 
 #
 # Hash modes
 #
-# CONFIG_CRYPTO_CMAC is not set
+CONFIG_CRYPTO_CMAC=y
 CONFIG_CRYPTO_HMAC=y
 # CONFIG_CRYPTO_XCBC is not set
 # CONFIG_CRYPTO_VMAC is not set
@@ -4311,7 +4337,7 @@ CONFIG_CRYPTO_CRC32C=y
 CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_CRCT10DIF is not set
 CONFIG_CRYPTO_GHASH=y
-# CONFIG_CRYPTO_MD4 is not set
+CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 # CONFIG_CRYPTO_RMD128 is not set
